objects/Commission_Paid_People__c.object
<CustomObject>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Legal Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Commission Paid People</relationshipLabel>
        <relationshipName>Commission_Paid_People</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Commission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Commission</label>
        <referenceTo>Internal_Commission__c</referenceTo>
        <relationshipLabel>Commission Paid People</relationshipLabel>
        <relationshipName>Commission_Paid_People</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LoggedinUser__c</fullName>
        <formula>$User.FirstName+&apos; &apos;+$User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LoggedinUser</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiplier_Percentage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Multiplier Percentage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameCompare__c</fullName>
        <formula>Reports_To__c = LoggedinUser__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NameCompare</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Effective_Date__c</fullName>
        <formula>Internal_Commission__r.Opportunity_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>Owner:User.FirstName +&apos; &apos;+ Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reports_To__c</fullName>
        <formula>Owner:User.ReportsTo__r.FirstName +&apos; &apos;+ Owner:User.ReportsTo__r.LastName</formula>
        <label>Reports To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Comp_Amount_For_Person__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Total Comp Amount For Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Commission Paid People</label>
    <nameField>
        <displayFormat>CPPEOP-{000000}</displayFormat>
        <label>Commission Paid People Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Paid People</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Commission_Paid_People</fullName>
        <active>true</active>
        <description>Restrict Owner change on the Commission_Paid_People object</description>
        <errorConditionFormula>ISCHANGED(OwnerId) &amp;&amp;  $Profile.Name  &lt;&gt; &quot;System Administrator&quot;</errorConditionFormula>
        <errorMessage>Owner Change not Permitted.</errorMessage>
    </validationRules>
</CustomObject>